@@ -1,6 +1,9 @@
 # ChangeLog for dev-haskell/x11-xft
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-haskell/x11-xft/ChangeLog,v 1.2 2009/11/26 21:44:36 kolmodin Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-haskell/x11-xft/ChangeLog,v 1.3 2012/03/04 05:02:57 gienah Exp $
+
+  04 Mar 2012; Mark Wright <gienah@gentoo.org> x11-xft-0.3.ebuild:
+  Add ~ppc64 keywords to x11-xft 0.3, thanks to EM3RY for testing.
 
   26 Nov 2009; <kolmodin@gentoo.org> x11-xft-0.3.ebuild:
   Remove alternative dependency on -darcs package.
